# SparkleEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SparkleEngine.sln
SparkleEngine/: SparkleEngine.vcxproj  SparkleEngine.vcxproj.filters
SparkleEngine/src/: Engine.cpp  Engine.h  Main.cpp
headers/: Engine.h
headers/utilities/: Logger.h
src/: main.cpp
src/utilities/: Logger.cpp
